@@ -3,16 +3,14 @@ package com.project.foradhd.domain.board.web.mapper;
 import com.project.foradhd.domain.board.persistence.entity.Comment;
 import com.project.foradhd.domain.board.persistence.entity.Post;
 import com.project.foradhd.domain.board.web.dto.request.CreateCommentRequestDto;
-import com.project.foradhd.domain.board.web.dto.response.CommentResponseDto;
+import com.project.foradhd.domain.board.web.dto.response.CommentListResponseDto;
 import com.project.foradhd.domain.user.persistence.entity.User;
 import com.project.foradhd.domain.user.persistence.entity.UserProfile;
 import com.project.foradhd.domain.user.persistence.repository.UserProfileRepository;
 import com.project.foradhd.domain.user.persistence.repository.UserRepository;
-import com.project.foradhd.global.paging.web.dto.response.PagingResponse;
 import org.mapstruct.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Mapper(componentModel = "spring")
 public interface CommentMapper {
@@ -42,14 +40,20 @@ public interface CommentMapper {
     @Mapping(source = "post.id", target = "postId")
     @Mapping(source = "user.id", target = "userId")
     @Mapping(source = "parentComment.id", target = "parentCommentId")
-    @Mapping(source = "childComments", target = "children", qualifiedByName = "mapChildComments")
-    CommentResponseDto.CommentListResponseDto commentToCommentListResponseDto(Comment comment);
+    @Mapping(target = "children", expression = "java(mapChildComments(comment.getChildComments(), blockedUserIdList))")
+    CommentListResponseDto.CommentResponseDto commentToCommentResponseDto(Comment comment, @Context List<String> blockedUserIdList);
 
-    default CommentResponseDto.CommentListResponseDto commentToCommentListResponseDtoWithChildren(Comment comment) {
+    @AfterMapping
+    default void setIsBlockedComment(@MappingTarget CommentListResponseDto.CommentResponseDto.CommentResponseDtoBuilder dto, Comment comment, @Context List<String> blockedUserIdList) {
+        boolean isBlocked = blockedUserIdList.contains(comment.getUser().getId());
+        dto.isBlocked(isBlocked);
+    }
+
+    default CommentListResponseDto.CommentResponseDto commentToCommentListResponseDtoWithChildren(Comment comment, List<String> blockedUserIdList) {
         if (comment.getParentComment() != null) { // 자식 댓글인 경우
-            return commentToCommentListResponseDto(comment);
+            return commentToCommentResponseDto(comment, blockedUserIdList);
         } else { // 부모 댓글인 경우
-            return CommentResponseDto.CommentListResponseDto.builder()
+            return CommentListResponseDto.CommentResponseDto.builder()
                     .id(comment.getId())
                     .content(comment.getContent())
                     .userId(comment.getUser().getId())
@@ -60,22 +64,12 @@ public interface CommentMapper {
                     .lastModifiedAt(comment.getLastModifiedAt())
                     .parentCommentId(comment.getParentComment() != null ? comment.getParentComment().getId() : null)
                     .children(comment.getChildComments().stream()
-                            .map(this::commentToCommentListResponseDto)
-                            .collect(Collectors.toList()))
+                            .map(childComment -> commentToCommentResponseDto(childComment, blockedUserIdList))
+                            .toList())
                     .nickname(comment.getNickname())
                     .profileImage(comment.getProfileImage())
                     .build();
         }
-    }
-
-    default CommentResponseDto toResponseDto(List<Comment> comments, PagingResponse paging) {
-        List<CommentResponseDto.CommentListResponseDto> commentList = comments.stream()
-                .map(this::commentToCommentListResponseDtoWithChildren)
-                .collect(Collectors.toList());
-        return CommentResponseDto.builder()
-                .commentList(commentList)
-                .paging(paging)
-                .build();
     }
 
     @Named("mapPost")
@@ -103,12 +97,12 @@ public interface CommentMapper {
     }
 
     @Named("mapChildComments")
-    default List<CommentResponseDto.CommentListResponseDto> mapChildComments(List<Comment> childComments) {
+    default List<CommentListResponseDto.CommentResponseDto> mapChildComments(List<Comment> childComments, List<String> blockedUserIdList) {
         if (childComments == null) {
-            return null;
+            return List.of();
         }
         return childComments.stream()
-                .map(this::commentToCommentListResponseDto)
-                .collect(Collectors.toList());
+                .map(childComment -> commentToCommentResponseDto(childComment, blockedUserIdList))
+                .toList();
     }
 }
